# mastering_mcu

./: README.md
fundamentals/: .gitignore
fundamentals/.metadata/: .log4j2.xml  version.ini
fundamentals/.metadata/.plugins/org.eclipse.cdt.core/: Test.language.settings.xml  x00_Sand_Box.1678820123371.pdom  x00_Sand_Box.language.settings.xml  x01_Hello_World.1678707039949.pdom  x01_Hello_World.language.settings.xml  x02_Sample_App.1678716691289.pdom  x02_Sample_App.language.settings.xml  x03_Clock.language.settings.xml  x04_Peripheral_Clock_Enable.1678800315440.pdom  x04_Peripheral_Clock_Enable.language.settings.xml  x05_HSI_Measurement.1678806052252.pdom  x05_HSI_Measurement.language.settings.xml  x06_Volatile_Keyword.1678815190976.pdom  x06_Volatile_Keyword.language.settings.xml
fundamentals/.metadata/.plugins/org.eclipse.cdt.dsf.ui/: dialog_settings.xml
fundamentals/.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
fundamentals/.metadata/.plugins/org.eclipse.core.resources/: 4.snap
fundamentals/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
fundamentals/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
fundamentals/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
fundamentals/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
fundamentals/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
fundamentals/000_Sand_Box/: .cproject  .project  000_Sand_Box Debug.launch  x00_Sand_Box Debug.launch
fundamentals/000_Sand_Box/Debug/: 000_Sand_Box.list  makefile  sources.mk
fundamentals/000_Sand_Box/Src/: main.c
fundamentals/000_Sand_Box_F4/: .cproject  .project  000_Sand_Box_F4.launch  STM32F469NIHX_FLASH.ld  STM32F469NIHX_RAM.ld  readme.txt
fundamentals/000_Sand_Box_F4/Debug/: 000_Sand_Box_F4.list  makefile  objects.list
fundamentals/000_Sand_Box_F4/Src/: main.c
fundamentals/000_Sand_Box_F4/Startup/: startup_stm32f469nihx.s
fundamentals/001_Hello_World/: .cproject  .project  x01_Hello_World.launch
fundamentals/001_Hello_World/Debug/: 001_Hello_World.list  makefile  objects.list  x01_Hello_World.list
fundamentals/002_Sample_App/: .cproject  .project
fundamentals/002_Sample_App/Debug/: makefile
fundamentals/003_Clock/: .cproject  .mxproject  003_Clock.ioc
fundamentals/004_Peripheral_Clock_Enable/: .cproject  .project  004_Peripheral_Clock_Enable Debug.launch  x04_Peripheral_Clock_Enable Debug.launch
fundamentals/004_Peripheral_Clock_Enable/Debug/: 004_Peripheral_Clock_Enable.list  makefile
fundamentals/004_Peripheral_Clock_Enable/Src/: main.c
fundamentals/005_HSI_Measurement/: .cproject  005_HSI_Measurement Debug.launch  STM32L4R5ZITX_RAM.ld
fundamentals/005_HSI_Measurement/Src/: main.c
fundamentals/006_Volatile_Keyword/: .cproject  .project  STM32L4R5ZITX_FLASH.ld  x06_Volatile_Keyword Debug.launch
fundamentals/006_Volatile_Keyword/Src/: main.c
fundamentals/007_GPIO/: .cproject  .project  007_GPIO Debug.launch
fundamentals/007_GPIO/Src/: main.c
fundamentals/007_GPIO/Startup/: startup_stm32l4r5zitx.s
fundamentals/GPIO_EXTI/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
fundamentals/GPIO_EXTI/SW4STM32/: startup_stm32f469xx.s
fundamentals/GPIO_EXTI/Src/: main.c  stm32f4xx_it.c
fundamentals/LEDBlinking/: .cproject  .mxproject  .project  LEDBlinking Debug.launch  LEDBlinking.ioc  LEDBlinking.launch  LEDBlinking2.launch
fundamentals/LEDBlinking/Debug/: LEDBlinking.list  makefile  objects.list  sources.mk
fundamentals/Template/: CMakeLists.txt  CMakePresets.json  README.md
fundamentals/Template/Core/Inc/: stm32f4xx_it.h
fundamentals/Template/Core/Src/: main.c  stm32f4xx_it.c
fundamentals/Template/cmake/: gcc-arm-none-eabi.cmake
fundamentals/x00_Sand_Box/: .cproject  .project
fundamentals/x00_Sand_Box/Debug/: makefile  x00_Sand_Box.list
fundamentals/x00_Sand_Box/Src/: main.c
fundamentals/x01_Hello_World/: .cproject  .project
fundamentals/x01_Hello_World/Src/: main.c  syscalls.c
fundamentals/x02_Sample_App/: .cproject  .project  x02_Sample_App.launch
fundamentals/x02_Sample_App/Debug/: x02_Sample_App.list
fundamentals/x02_Sample_App/Src/: main.c
fundamentals/x03_Clock/: .cproject  .project  x03_Clock.ioc
fundamentals/x04_Peripheral_Clock_Enable/: .cproject  .project
fundamentals/x04_Peripheral_Clock_Enable/Debug/: makefile  x04_Peripheral_Clock_Enable.list
fundamentals/x05_HSI_Measurement/: .cproject  .project  x05_HSI_Measurement Debug.launch
fundamentals/x05_HSI_Measurement/Debug/: makefile  objects.list  x05_HSI_Measurement.list
fundamentals/x05_HSI_Measurement/Src/: main.c
fundamentals/x06_Volatile_Keyword/: .cproject  .project  x06_Volatile_Keyword Debug.cfg
fundamentals/x06_Volatile_Keyword/Debug/: makefile  x06_Volatile_Keyword.list
(+74 files in other folders)
